--- a/scss/style.css
+++ b/scss/style.css
@@ -67,11 +67,12 @@ body {
 body {
   font-family: "Poppins", sans-serif;
   color: #333;
+  font-weight: bold;
 }
 
 h1 {
-  margin-top: 2rem;
   text-align: center;
+  font-weight: bold; /* <-- use font-weight instead of text */
 }
 
 h2 {
@@ -83,13 +84,10 @@ h2 {
 .container {
   display: flex;
   flex-direction: column;
+  font-weight: bold;
   max-width: 80%;
   align-items: center;
   text-align: center;
-  justify-content: center;
-  min-height: 70vh;
-  gap: 1rem;
-  margin-inline: auto;
 }
 
 .drop-container {
